test/grammar/types/args/call_expr_err_too_few_args_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:1:5
  |
1 | a = "".startswith()
  |     ^ expected 1 positional argument, found 0
  |